--- a/templates/participant/admin.html.twig
+++ b/templates/participant/admin.html.twig
@@ -14,7 +14,17 @@
         <tr>
             <th>Gestion sorties</th>
             <td> <a href="{{ path('app_sorties_index') }}" class="btn btn-primary">Gérer</a></td>
+        </tr
+        ><tr>
+            <th>Gestion Lieux</th>
+            <td> <a href="{{ path('app_lieux_index') }}" class="btn btn-primary">Gérer</a></td>
         </tr>
+
+        <tr>
+            <th>Gestion Villes</th>
+            <td> <a href="{{ path('app_ajouter_villes_index') }}" class="btn btn-primary">Gérer</a></td>
+        </tr>
+
 
 
 
