--- a/templates/participant/show.html.twig
+++ b/templates/participant/show.html.twig
@@ -3,40 +3,38 @@
 {% block title %}Participant{% endblock %}
 
 {% block body %}
-    <h1 class="d-flex justify-content-center">Participant</h1>
+    <div class="container my-5">
+        <h1 class="text-center mb-4">Profil du Participant</h1>
 
-    <div class="d-flex justify-content-center mb-4">
-        <img class="img-fluid w-25" src="{{ asset('uploads/photos/' ~ participant.photo) }}" alt="Photo de profil" class="profile-photo">
-    </div>
-
-    <div class="container">
         <div class="row justify-content-center">
+            <div class="col-md-4 text-center">
+                <img src="{{ asset('uploads/photos/' ~ participant.photo) }}" alt="Photo de profil" class="img-fluid rounded-circle shadow-sm w-75">
+            </div>
             <div class="col-md-8">
-                <table class="table">
-                    <tbody>
-                    <tr>
-                        <th>Email</th>
-                        <td>{{ participant.email }}</td>
-                    </tr>
-                    <tr>
-                        <th>Pseudo</th>
-                        <td>{{ participant.pseudo }}</td>
-                    </tr>
-                    <tr>
-                        <th>Nom</th>
-                        <td>{{ participant.nom }}</td>
-                    </tr>
-                    <tr>
-                        <th>Prenom</th>
-                        <td>{{ participant.prenom }}</td>
-                    </tr>
-                    <tr>
-                        <th>Telephone</th>
-                        <td>{{ participant.telephone }}</td>
-                    </tr>
-                    <tr>
-                        <th>Sorties Organisées</th>
-                        <td>
+                <div class="user-info">
+                    <div class="mb-3">
+                        <strong>Email:</strong>
+                        <p>{{ participant.email }}</p>
+                    </div>
+                    <div class="mb-3">
+                        <strong>Pseudo:</strong>
+                        <p>{{ participant.pseudo }}</p>
+                    </div>
+                    <div class="mb-3">
+                        <strong>Nom:</strong>
+                        <p>{{ participant.nom }}</p>
+                    </div>
+                    <div class="mb-3">
+                        <strong>Prénom:</strong>
+                        <p>{{ participant.prenom }}</p>
+                    </div>
+                    <div class="mb-3">
+                        <strong>Téléphone:</strong>
+                        <p>{{ participant.telephone }}</p>
+                    </div>
+                    <div class="mb-3">
+                        <strong>Sorties Organisées:</strong>
+                        <p>
                             {% if participant.sorties|length > 0 %}
                                 <select class="form-select">
                                     {% for sortie in participant.sorties %}
@@ -44,13 +42,13 @@
                                     {% endfor %}
                                 </select>
                             {% else %}
-                                Aucune sortie associée
+                                <em>Aucune sortie associée</em>
                             {% endif %}
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Sorties auxquelles vous êtes inscrit</th>
-                        <td>
+                        </p>
+                    </div>
+                    <div class="mb-3">
+                        <strong>Sorties auxquelles vous êtes inscrit:</strong>
+                        <p>
                             {% if participant.inscriptions|length > 0 %}
                                 <select class="form-select">
                                     {% for inscription in participant.inscriptions %}
@@ -58,33 +56,34 @@
                                     {% endfor %}
                                 </select>
                             {% else %}
-                                Aucune sortie associée
+                                <em>Aucune sortie associée</em>
                             {% endif %}
-                        </td>
-                    </tr>
+                        </p>
+                    </div>
+
                     {% if is_granted('ROLE_ADMIN') %}
-                        <tr>
-                            <th>Administrateur</th>
-                            <td>{{ participant.administrateur ? 'Yes' : 'No' }}</td>
-                        </tr>
-                        <tr>
-                            <th>Actif</th>
-                            <td>{{ participant.actif ? 'Yes' : 'No' }}</td>
-                        </tr>
-                        <tr>
-                            <th>Roles</th>
-                            <td>{{ participant.roles|json_encode(constant('JSON_PRETTY_PRINT')) }}</td>
-                        </tr>
+                        <div class="mb-3">
+                            <strong>Administrateur:</strong>
+                            <p>{{ participant.administrateur ? 'Oui' : 'Non' }}</p>
+                        </div>
+                        <div class="mb-3">
+                            <strong>Actif:</strong>
+                            <p>{{ participant.actif ? 'Oui' : 'Non' }}</p>
+                        </div>
+                        <div class="mb-3">
+                            <strong>Rôles:</strong>
+                            <pre>{{ participant.roles|json_encode(constant('JSON_PRETTY_PRINT')) }}</pre>
+                        </div>
                     {% endif %}
-                    </tbody>
-                </table>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="d-flex justify-content-center">
-        {% if is_granted('ROLE_ADMIN') %}
-            <a href="{{ path('app_participant_index') }}" class="btn btn-primary ms-2">Liste d'utilisateurs</a>
-        {% endif %}
-        <a href="{{ path('app_participant_edit_profil') }}" class="btn btn-success ms-2">Modifier</a>
+
+        <div class="text-center mt-4">
+            {% if is_granted('ROLE_ADMIN') %}
+                <a href="{{ path('app_participant_index') }}" class="btn btn-primary mx-2">Liste d'utilisateurs</a>
+            {% endif %}
+            <a href="{{ path('app_participant_edit_profil') }}" class="btn btn-success mx-2">Modifier le profil</a>
+        </div>
     </div>
 {% endblock %}
