traduction des block title + erreurs

--- a/templates/lieux/edit.html.twig
+++ b/templates/lieux/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Lieux{% endblock %}
+{% block title %}Modifier Lieux{% endblock %}
 
 {% block body %}
     <h1 class="d-flex justify-content-center">Modifier le lieu</h1>
