--- a/templates/lieux/index.html.twig
+++ b/templates/lieux/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Lieux index{% endblock %}
+{% block title %}Liste des Lieux{% endblock %}
 
 {% block body %}
     <h1 class="d-flex justify-content-center">Liste des lieux</h1>
