--- a/templates/participant/edit.html.twig
+++ b/templates/participant/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Participant{% endblock %}
+{% block title %}Modifier Profile{% endblock %}
 
 {% block body %}
     <h1 class="d-flex justify-content-center">Modifier utilisateur</h1>
