--- a/templates/participant/import.html.twig
+++ b/templates/participant/import.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Import Users{% endblock %}
+{% block title %}Importer Utilisateurs{% endblock %}
 
 {% block body %}
     <h1>Import Users from CSV</h1>
