--- a/templates/participant/index.html.twig
+++ b/templates/participant/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Users Administration{% endblock %}
+{% block title %}Administration Utilisateurs{% endblock %}
 
 {% block body %}
     <h1 class="d-flex justify-content-center">Liste des utilisateurs</h1>
