--- a/templates/sorties/edit.html.twig
+++ b/templates/sorties/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Sorties{% endblock %}
+{% block title %}Modifier Sorties{% endblock %}
 
 {% block body %}
     <h1 class="d-flex justify-content-center">Modifier la sortie</h1>
