--- a/templates/sorties/index.html.twig
+++ b/templates/sorties/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Sorties index{% endblock %}
+{% block title %}Liste des Sorties{% endblock %}
 
 {% block body %}
     <h1 class="d-flex justify-content-center">Liste des sorties</h1>
