--- a/templates/sorties/new.html.twig
+++ b/templates/sorties/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Sorties{% endblock %}
+{% block title %}Nouvelle Sorties{% endblock %}
 
 {% block body %}
     <h1 class="d-flex justify-content-center">Créer une sortie</h1>
