--- a/templates/lieux/new.html.twig
+++ b/templates/lieux/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Lieux{% endblock %}
+{% block title %}Nouveau Lieux{% endblock %}
 
 {% block body %}
     <h1 class="d-flex justify-content-center">Créer un lieu</h1>
