--- a/templates/participant/show.html.twig
+++ b/templates/participant/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Participant{% endblock %}
+{% block title %}Profile{% endblock %}
 
 {% block body %}
     <div class="container my-5">
