--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -15,6 +15,14 @@ h1, h2, h3, h4 {
 .card {
     max-width: 18rem;
     margin: auto;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+
+.card.show-card {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .card img {
@@ -71,6 +79,26 @@ nav a {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
     margin: 20px auto;
     max-width: 700px;
+}
+
+.logo {
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 1s ease-out, transform 1s ease-out;
+}
+.logo.animate-logo {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.signup-button {
+    background-color: #0B5ED7;
+    color: white;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+.signup-button:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
