--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -22,7 +22,7 @@
                                 </div>
                             {% endif %}
 
-                            <img src="{{ asset('/uploads/photos/sortir_transparent.png') }}" alt="Logo" class="img-fluid rounded mx-auto d-block">
+                            <img src="{{ asset('/uploads/photos/sortir_transparent.png') }}" alt="Logo" class="logo img-fluid rounded mx-auto d-block">
 
                             <h1 class="h3 mb-3 font-weight-normal">Connectez-vous !</h1>
 
