--- a/templates/groupe_prive/_form.html.twig
+++ b/templates/groupe_prive/_form.html.twig
@@ -1,4 +1,5 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn btn-success ms-2">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-success ms-2"
+            style="display: inline-block;">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
