--- a/templates/groupe_prive/new.html.twig
+++ b/templates/groupe_prive/new.html.twig
@@ -1,11 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Groupes Prives{% endblock %}
+{% block title %}Groupes Privés{% endblock %}
 
 {% block body %}
-    <h1>Créer un nouveau groupe</h1>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Créer un Nouveau Groupe</h1>
 
-    {{ include('groupe_prive/_form.html.twig') }}
+        <div class="card shadow-sm">
+            <div class="card-body">
+                {{ include('groupe_prive/_form.html.twig') }}
+            </div>
+        </div>
 
-    <a class="btn btn-success ms-2" href="{{ path('app_groupe_prive_index') }}">Mes groupes</a>
+
+    </div>
 {% endblock %}
