--- a/templates/participant/admin.html.twig
+++ b/templates/participant/admin.html.twig
@@ -3,32 +3,54 @@
 {% block title %}Administration{% endblock %}
 
 {% block body %}
-    <h1>Admin Dashboard</h1>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Admin Dashboard</h1>
 
-    <table class="table">
-        <tbody>
-        <tr>
-            <th>Gestion Utilisateurs</th>
-            <td> <a href="{{ path('app_participant_index') }}" class="btn btn-primary">Gérer</a></td>
-        </tr>
-        <tr>
-            <th>Gestion sorties</th>
-            <td> <a href="{{ path('app_sorties_index') }}" class="btn btn-primary">Gérer</a></td>
-        </tr
-        ><tr>
-            <th>Gestion Lieux</th>
-            <td> <a href="{{ path('app_lieux_index') }}" class="btn btn-primary">Gérer</a></td>
-        </tr>
-
-        <tr>
-            <th>Gestion Villes</th>
-            <td> <a href="{{ path('app_ajouter_villes_index') }}" class="btn btn-primary">Gérer</a></td>
-        </tr>
-
-
-
-
-        </tbody>
-    </table>
-
-    {% endblock %}
+        <div class="card shadow-lg">
+            <div class="card-body">
+                <table class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col" class="text-center">Section</th>
+                        <th scope="col" class="text-center">Action</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row" class="align-middle text-center">Gestion Utilisateurs</th>
+                        <td class="text-center">
+                            <a href="{{ path('app_participant_index') }}" class="btn btn-primary">
+                                <i class="bi bi-person-fill"></i> Gérer
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="align-middle text-center">Gestion Sorties</th>
+                        <td class="text-center">
+                            <a href="{{ path('app_sorties_index') }}" class="btn btn-primary">
+                                <i class="bi bi-calendar-event-fill"></i> Gérer
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="align-middle text-center">Gestion Lieux</th>
+                        <td class="text-center">
+                            <a href="{{ path('app_lieux_index') }}" class="btn btn-primary">
+                                <i class="bi bi-geo-alt-fill"></i> Gérer
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="align-middle text-center">Gestion Villes</th>
+                        <td class="text-center">
+                            <a href="{{ path('app_ajouter_villes_index') }}" class="btn btn-primary">
+                                <i class="bi bi-building"></i> Gérer
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+{% endblock %}
