--- a/templates/participant/index.html.twig
+++ b/templates/participant/index.html.twig
@@ -6,56 +6,61 @@
     <h1 class="d-flex justify-content-center">Liste des utilisateurs</h1>
 
 
-    <table class="table">
-        <thead>
+    <table class="table table-hover table-bordered table-striped align-middle">
+        <thead class="table-light text-center">
         <tr>
-            <th>Id</th>
-            <th>Email</th>
-            <th>Pseudo</th>
-            <th>Nom</th>
-            <th>Prenom</th>
-            <th>Telephone</th>
-            <th>Administrateur</th>
-            <th>Actif</th>
-            <th>Roles</th>
-            <th>actions</th>
+            <th scope="col">Id</th>
+            <th scope="col">Email</th>
+            <th scope="col">Pseudo</th>
+            <th scope="col">Nom</th>
+            <th scope="col">Prénom</th>
+            <th scope="col">Téléphone</th>
+            <th scope="col">Administrateur</th>
+            <th scope="col">Actif</th>
+            <th scope="col">Rôles</th>
+            <th scope="col">Actions</th>
         </tr>
         </thead>
         <tbody>
         {% for participant in participants %}
-            <tr>
+            <tr class="text-center">
                 <td>{{ participant.id }}</td>
                 <td>{{ participant.email }}</td>
                 <td>{{ participant.pseudo }}</td>
                 <td>{{ participant.nom }}</td>
                 <td>{{ participant.prenom }}</td>
                 <td>{{ participant.telephone }}</td>
-                <td>{{ participant.administrateur ? 'Yes' : 'No' }}</td>
-                <td>{{ participant.actif ? 'Yes' : 'No' }}</td>
+                <td>{{ participant.administrateur ? 'Oui' : 'Non' }}</td>
+                <td>{{ participant.actif ? 'Oui' : 'Non' }}</td>
                 <td>{{ participant.roles ? participant.roles|json_encode : '' }}</td>
                 <td>
-                    <a href="{{ path('app_participant_show', {'id': participant.id}) }}"
-                       class="btn btn-primary">Details</a>
-                    <a href="{{ path('app_participant_edit', {'id': participant.id}) }}" class="btn btn-primary">Modifier</a>
-                    {% if participant.actif %}
-                        <a href="{{ path('app_participant_actif', {'id': participant.id}) }}" class="btn btn-warning">Désactiver</a>
-                    {% else %}
-                        <a href="{{ path('app_participant_actif', {'id': participant.id}) }}" class="btn btn-success">Activer</a>
-                    {% endif %}
-
-                    {{ include('participant/_delete_form.html.twig') }}
+                    <div class="btn-group">
+                        <a href="{{ path('app_participant_show', {'id': participant.id}) }}" class="btn btn-outline-primary btn-sm">Détails</a>
+                        <a href="{{ path('app_participant_edit', {'id': participant.id}) }}" class="btn btn-outline-primary btn-sm">Modifier</a>
+                        {% if participant.actif %}
+                            <a href="{{ path('app_participant_actif', {'id': participant.id}) }}" class="btn btn-outline-warning btn-sm">Désactiver</a>
+                        {% else %}
+                            <a href="{{ path('app_participant_actif', {'id': participant.id}) }}" class="btn btn-outline-success btn-sm">Activer</a>
+                        {% endif %}
+                    </div>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="11">no records found</td>
+                <td colspan="10" class="text-center">Aucun enregistrement trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-    <div class="d-flex justify-content-center">
-        <a href="{{ path('app_participant_new') }}" class="btn btn-primary">Créer un nouvel utilisateur</a>
-        <a href="{{ path('app_participant_import') }}" class="btn btn-primary">Importer à partir d'un fichier CSV</a>
+
+    <!-- Buttons at the bottom -->
+    <div class="d-flex justify-content-center mt-4">
+        <a href="{{ path('app_participant_new') }}" class="btn btn-success mx-2">
+            <i class="bi bi-plus-circle"></i> Créer un nouvel utilisateur
+        </a>
+        <a href="{{ path('app_participant_import') }}" class="btn btn-primary mx-2">
+            <i class="bi bi-file-earmark-arrow-up"></i> Importer un fichier CSV
+        </a>
     </div>
 
 
