--- a/templates/participant/edit.html.twig
+++ b/templates/participant/edit.html.twig
@@ -3,16 +3,20 @@
 {% block title %}Modifier Profile{% endblock %}
 
 {% block body %}
-    <h1 class="d-flex justify-content-center">Modifier utilisateur</h1>
+    <h1 class="d-flex justify-content-center mt-3">Modifier utilisateur</h1>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-6">
+            <div class="col-md-6 text-center">
                 {{ include('participant/_form2.html.twig', {'button_label': 'Modifier'}) }}
 
-                <a href="{{ path('app_participant_index') }}" class="btn btn-primary ms-2">Liste d'utilisateurs</a>
-
-                {{ include('participant/_delete_form.html.twig') }}
+                {% if is_granted('ROLE_ADMIN') %}
+                    <div class="mt-3">
+                        <a href="{{ path('app_participant_index') }}" class="btn btn-primary ms-2">Liste d'utilisateurs</a>
+                        {{ include('participant/_delete_form.html.twig') }}
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
+
 {% endblock %}
