--- a/templates/groupe_prive/_delete_form.html.twig
+++ b/templates/groupe_prive/_delete_form.html.twig
@@ -1,5 +1,4 @@
-<form method="post" action="{{ path('app_groupe_prive_delete', {'id': groupe_prive.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_groupe_prive_delete', {'id': groupe_prive.id}) }}" onsubmit="return confirm('Êtes vous surs de vouloir supprimer ce groupe ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ groupe_prive.id) }}">
-    <button class="btn btn-danger ms-2"
-            style="display: inline-block;">Delete</button>
+    <button class="btn btn-danger ms-2" style="display: inline-block;">Supprimer</button>
 </form>
