--- a/templates/groupe_prive/delete_participant.html.twig
+++ b/templates/groupe_prive/delete_participant.html.twig
@@ -1,11 +1,26 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Supprimer des participants au groupe privé</h1>
+    <h1 class="text-center mt-4">Supprimer des participants au groupe privé</h1>
 
     {{ form_start(form) }}
-    {{ form_widget(form) }}
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="checkbox-grid">
+                {% for child in form.participants %}
+                    <div class="checkbox-item">
+                        {{ form_widget(child) }}
+                        {{ form_label(child) }}
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    <div class="text-center mt-3">
+        {{ form_row(form.submit) }}
+        <a href="{{ path('app_groupe_prive_index') }}" class="btn btn-secondary">Retour</a>
+    </div>
+
     {{ form_end(form) }}
 
-    <a href="{{ path('app_groupe_prive_index') }}" class="btn btn-secondary">Retour</a>
 {% endblock %}
