--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,8 +3,14 @@
 {% block title %}Inscription{% endblock %}
 
 {% block body %}
-    <h1>Inscription</h1>
 
-    {{ form(registrationForm) }}
+    <h1 class="text-center mt-4">Inscription</h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                {{ form(registrationForm) }}
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
